--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -11,5 +11,11 @@ html,body,#app{
 }
 
 .el-card{
+    /* 通过important提高权重更改组件样式 */
     box-shadow: 0,1px,1px rgba(0, 0, 0, .15) !important;
+}
+
+.el-table{
+    margin-top: 15px;
+    font-size: 12px;
 }
