--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -3,6 +3,7 @@ html,body,#app{
     height:100%;
     margin: 0;
     padding: 0;
+    min-width: 1366px;
 }
 
 .el-breadcrumb{
@@ -18,4 +19,8 @@ html,body,#app{
 .el-table{
     margin-top: 15px;
     font-size: 12px;
+}
+
+.el-button{
+    margin-right: 15px;
 }
